# ChangeLog for sys-kernel/git-sources
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.783 2010/04/09 00:17:52 mpagano Exp $

*git-sources-2.6.34_rc3-r9 (09 Apr 2010)

  09 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r9.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r8 (08 Apr 2010)
*git-sources-2.6.34_rc3-r7 (08 Apr 2010)

  08 Apr 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r7.ebuild, +git-sources-2.6.34_rc3-r8.ebuild:
  Version bumps

*git-sources-2.6.34_rc3-r6 (07 Apr 2010)

  07 Apr 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r6.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r5 (06 Apr 2010)

  06 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r5.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r4 (06 Apr 2010)

  06 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r4.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r3 (06 Apr 2010)

  06 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r3.ebuild:
  Version bump

  05 Apr 2010; Michael Pagano <mpagano@gentoo.org> ChangeLog:
  Version bump

*git-sources-2.6.34_rc3-r2 (03 Apr 2010)

  03 Apr 2010; Michael Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r2.ebuild:
  Version bump

*git-sources-2.6.34_rc3-r1 (02 Apr 2010)

  02 Apr 2010; Mike Pagano <mpagano@gentoo.org>
  +git-sources-2.6.34_rc3-r1.ebuild:
  Version bump

  30 Mar 2010; Mike Pagano <mpagano@gentoo.org>
  -git-sources-2.6.34_rc1.ebuild, -git-sources-2.6.34_rc1-r1.ebuild,
  -git-sources-2.6.34_rc1-r2.ebuild, -git-sources-2.6.34_rc1-r3.ebuild,
  -git-sources-2.6.34_rc1-r4.ebuild, -git-sources-2.6.34_rc1-r5.ebuild,
  -git-sources-2.6.34_rc1-r6.ebuild, -git-sources-2.6.34_rc1-r7.ebuild,
  -git-sources-2.6.34_rc1-r8.ebuild, -git-sources-2.6.34_rc1-r9.ebuild:
  Old version cleanup

*git-sources-2.6.34_rc3 (30 Mar 2010)