@@ -8,6 +8,7 @@ DIST patch-2.6.34-rc2-git3.bz2 93830 RMD160 2ff89bf624e55425d54b4950c313189df240
 DIST patch-2.6.34-rc2-git4.bz2 119531 RMD160 e677de918995f65863c0698f153c10d965ca8930 SHA1 8c69b7205f4c7c97118a7664f8bbcb0cfd690605 SHA256 73dcf5d3655e3c52463b9a96101121787ae053b1ff89f5561a12b8bd8d98c716
 DIST patch-2.6.34-rc2.bz2 7334357 RMD160 29df8bad983c4363b3111615d22e1b6586c7ae8d SHA1 1af2c32c10f22b11bc7c6240c6247d36004ca197 SHA256 42cc4d04d782289c8d3007fed57707478cf0fed071c0547ee7540e01ad100e40
 DIST patch-2.6.34-rc3-git1.bz2 57294 RMD160 50c604e1ba7c9248055942acd216b10791c1b1b6 SHA1 9173fd64ce783f6ebe664d45219f0025f7a61ba2 SHA256 b6a0ab32fddcf304ef2393d50d1fa4b30832488ae9df76a6bacab971d6b7f762
+DIST patch-2.6.34-rc3-git10.bz2 423320 RMD160 26861de3c9a0c87bc8411e4ebf2e2435c1d0493c SHA1 ffa816c6a4eee41c86140e4ea8524bedf0ffacf1 SHA256 783286ee48b532c98cd155b5c275ccda9dd5885297838e3bd9cd3a51bcadd137
 DIST patch-2.6.34-rc3-git2.bz2 71675 RMD160 5d5713997ff5040df725aa300b25ae019778b402 SHA1 7ef84a4baf2e3cbbab4d96fc68fe4a98da92fbe6 SHA256 e92e4b9dffb467df44527d02ed86259787afcb55b0efabc4dc8c49de7bea1fb4
 DIST patch-2.6.34-rc3-git3.bz2 80499 RMD160 968f1769456b6f52ca113d5b94e8bb1d652a8d37 SHA1 bbea02f503b8e0eed95506f96fa2bfff1cdff5d6 SHA256 6aafb031c5d31dcbdf868967d7236e77088c2c8cf18a1017b30a76c42782ee95
 DIST patch-2.6.34-rc3-git4.bz2 253105 RMD160 a6a4d1fc518bb41e5116e604b400d86ff7726f1a SHA1 513f7b3cb36551d6c38590227057f306f43bd164 SHA256 65e9bcff616d8059619242f0690c347da036e25b0b44bc78b0a6e72f090fa0a2
@@ -23,6 +24,7 @@ EBUILD git-sources-2.6.34_rc2-r3.ebuild 1246 RMD160 3c6193c70245da6734aa4e1e717d
 EBUILD git-sources-2.6.34_rc2-r4.ebuild 1246 RMD160 aeb3eb3961c743d2d80bf7c2a32f872e90e88cd8 SHA1 d03a4f6aedbd8ff09ad24b6dc4d9064e340e47ee SHA256 6525addcd519b6a98a24785a5959f6f43d5d95d585192d07c4070fafb6bbcf0a
 EBUILD git-sources-2.6.34_rc2.ebuild 1243 RMD160 3d84ab636b2b9eef2de00a528f88cb23aadffd4b SHA1 74e1b135c1c23ecdea363d39480f885283826515 SHA256 ba1a377f0c4f46066391c2e96c8a5b8dd789c890129f1ac70cb75e18f79f0e61
 EBUILD git-sources-2.6.34_rc3-r1.ebuild 1246 RMD160 95dfc05ecedcd8a57389ee0caf24f4a422d7c3cf SHA1 67ea9d291885b595e0b9bd0f66c6c60f63e7d841 SHA256 bc212ef25db9a201ed7cd05406a771d41f1ac70d29023af12e7f879142916d05
+EBUILD git-sources-2.6.34_rc3-r10.ebuild 1247 RMD160 6eb2ea4475c2d4edda34e8306dd9c87085933ad7 SHA1 4a83c74ecc15ee937ca38e2b80a407097fd11129 SHA256 b10d3006a23e494c54ca78d10ddeee89605b8230616771280dc9302a9f908f72
 EBUILD git-sources-2.6.34_rc3-r2.ebuild 1246 RMD160 b7775493dcf3f936cf85d08fd5f3f1880cd3908a SHA1 17dd6e5f6e66e04bdea2e3e7559a849a894c9ab2 SHA256 0a6bc38b0ef32a3c260c4366ca670356a8559ce6ac741234c7ba77cae2feeeac
 EBUILD git-sources-2.6.34_rc3-r3.ebuild 1246 RMD160 b2417a0ade39b15aca691b1a1504811960889ee9 SHA1 6aedbe4f994e430d02d7c0745f04e82ec617f657 SHA256 53f74b3129706d1faf402b7782481f168d4a00b4660a3c1cf9b1058435b335d8
 EBUILD git-sources-2.6.34_rc3-r4.ebuild 1246 RMD160 a6559ca217871ef90fb58e07f4a2d604c1572cf0 SHA1 1876f29c4b9277c3813f2f5d7e0e72756654e52f SHA256 12f607e13a006f8a249ae20195f1fb8d2850f5b16aa5a9fae5138ab6af6a097b
@@ -32,12 +34,12 @@ EBUILD git-sources-2.6.34_rc3-r7.ebuild 1246 RMD160 84dff98300f60b4913d0505bfb4c
 EBUILD git-sources-2.6.34_rc3-r8.ebuild 1246 RMD160 07dba1a9fb4f971a5872f70ffd853c2ec17d3616 SHA1 a4fd2762ea1c54292e4f912dcfb430085a3497eb SHA256 d2673518eb2c2f862d97c8af90e0019ef1a539df6fe5f90989e6ccd51f325447
 EBUILD git-sources-2.6.34_rc3-r9.ebuild 1246 RMD160 24343121e4740a5aabcbe9e30adc88d4dc2b323c SHA1 937507bf57d21fcb7ff9b2a1baebfa265d8120a8 SHA256 926eb98283a181e2ecdf98f1ff26cbe339552250b1c22f9a7c6469f75c3ea587
 EBUILD git-sources-2.6.34_rc3.ebuild 1243 RMD160 591799a0d0f7a3b14d9b783f7cc8290cd8679a4a SHA1 48a6fcf3e4342bb64648ab588b54573fb7dbb4ce SHA256 65527b6c09094860d43fd4b895b6f337574747a300e12ef1dfbc985fe53eef51
-MISC ChangeLog 149113 RMD160 3ce9219f296a99db931c07875a34523bf2e28db2 SHA1 7af5ea6f6f508cb3ab0776bb9ebf7a0be7256acd SHA256 5f05c844f41099696000b7001023c98d80a3979319f61d38592679903f697a63
+MISC ChangeLog 149261 RMD160 9f6e4e29701438959ff6a784cc61b2331b48e8f1 SHA1 61c9d10f636e6a6ad6f86a02819f522c34061165 SHA256 9db4e2f9e7ec8c475420dcd775ee7bfd7c12ead967e2674631397a183dd04858
 MISC metadata.xml 443 RMD160 2b491a6310ff59f0658f64be1328b983ac82a462 SHA1 a65b3e97b9088758114ce0dbb46abb15879211e0 SHA256 9232689e2d3a60e31b4b0194770e6395613a110b77bef2f4e2f98d919acbaf13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAku+cjsACgkQPDPGULV25OMN1ACgkPs2HYAUHOR5t85SwOrcEOt3
-dAAAni0I6pXBVOt659ev7EfWsved0OvX
-=btdf
+iEYEARECAAYFAku/xFkACgkQPDPGULV25ONJEQCgu6Fy97TnaNlPLINABWs3013K
+UNEAoMAWqxdyYIfP2m9fWKa7MdJapFbW
+=r+4+
 -----END PGP SIGNATURE-----
