@@ -1,6 +1,12 @@
 # ChangeLog for sys-kernel/git-sources
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.783 2010/04/09 00:17:52 mpagano Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/git-sources/ChangeLog,v 1.784 2010/04/10 00:20:26 mpagano Exp $
+
+*git-sources-2.6.34_rc3-r10 (10 Apr 2010)
+
+  10 Apr 2010; Michael Pagano <mpagano@gentoo.org>
+  +git-sources-2.6.34_rc3-r10.ebuild:
+  Version bump
 
 *git-sources-2.6.34_rc3-r9 (09 Apr 2010)
 
